// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component - layout should render 1`] = `
<main
  className=" "
/>
`;

exports[`component - layout should render with props 1`] = `
<main
  className=" "
>
  <b>
    #content
  </b>
</main>
`;
